# newlib-dummyOS

./: config.sub
libgloss/arm/: configure.in
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/dummyos/: Makefile.am  Makefile.in  configure  configure.in  dup.c  exec.c  exit.c  fork.c  fs.c  io.c  ioctl.c  nanosleep.c  pipe.c  sbrk.c  signal.c  stat.c  sys.c  syscall.h  termios.c  tty.c  wait.c
newlib/libc/sys/dummyos/machine/: Makefile.am  configure  configure.in
newlib/libc/sys/dummyos/machine/arm/: Makefile.am  Makefile.in  configure  crt0.S  syscall.S
newlib/libc/sys/dummyos/machine/i386/: Makefile.am  Makefile.in  configure  configure.in  crt0.S  syscall.c
newlib/libc/sys/dummyos/sys/: _timespec.h  _types.h  dirent.h  errno.h  ioctl.h  signal.h  stat.h  termios.h
